# meta-learning-base

./: .gitignore  README.md  few_shot_results.json  few_shot_results_complete.json  main.py  pyproject.toml
notebooks/: experiment_beta_visualization.ipynb  experiment_few_shot.ipynb  experiment_main.ipynb  pacs_visualization.ipynb
src/: callbacks.py  datasets.py  models.py  utils.py
src/scripts/: experiment_beta.sh  experiment_few_shot.sh  experiment_model_selection.sh  few_shot.py  model_selection.py  test.py  train.py
tests/: test_datasets.py
