[project]
name = "meta-learning-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.6",
    "datasets>=3.6.0",
    "einops>=0.8.1",
    "gdown>=5.2.0",
    "ipywidgets>=8.1.7",
    "lightning>=2.5.1.post0",
    "matplotlib>=3.10.3",
    "notebook>=7.4.2",
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pynvml>=12.0.0",
    "pytest>=8.3.5",
    "rich>=14.0.0",
    "ruff>=0.11.8",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "timm>=1.0.15",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchmetrics>=1.7.1",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.11",
]
